# spritepacker

./: CMakeLists.txt  README.md
src/: atlas.cpp  atlas.h  image.cpp  image.h  io.cpp  io.h  project.cpp  project.h  spritepacker.cpp  ui.cpp  ui.h
